# online_monitor

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  wheels.yml
examples/converter/: bidirectional_converter.py  example_converter.py  position_correlator.py
examples/full_example/: configuration.yaml  main.py  producer.py
examples/producer_sim/: example_producer_sim.py
examples/receiver/: bidirectional_receiver.py  example_receiver.py  position_correlator_receiver.py
online_monitor/: OnlineMonitor.ini  OnlineMonitor.py  __init__.py  configuration.yaml  plugin_online_monitor.py  start_converter.py  start_online_monitor.py  start_producer_sim.py  stop_online_monitor.py  utils.py
online_monitor/converter/: converter_manager.py  correlator.py  forwarder.py  pybar_fei4.py  transceiver.py
online_monitor/examples/: Readme  configuration.yaml
online_monitor/examples/converter/: bidirectional_converter.py  example_converter.py  position_correlator.py
online_monitor/examples/full_example/: configuration.yaml  main.py
online_monitor/examples/producer_sim/: example_producer_sim.py  silab_default_producer.py
online_monitor/examples/receiver/: bidirectional_receiver.py  example_receiver.py  position_correlator_receiver.py
online_monitor/receiver/: pybar_fei4.py  receiver.py
online_monitor/testing/: test_converter.py  test_online_monitor.py  test_producer_sim.py  test_serialization.py  test_settings.py  test_start_scripts.py  test_utils.py
online_monitor/utils/: producer_sim.py  producer_sim_manager.py  settings.py  utils.py
tests/: test_converter.py  test_online_monitor.py  test_producer_sim.py  test_settings.py  test_start_scripts.py  test_utils.py
