[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymosa"
dynamic = ["version"]
keywords = ['online monitor', 'real time', 'plots']
license = { "text" = "MIT License" }
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
authors = [
    {name = "David-Leon Pohl", email="pohl@physik.uni-bonn.de"},
]
maintainers = [
  {name ="Pascal Wolf", email="wolf@physik.uni-bonn.de"}
]

dependencies = [
    "pyzmq",  # inter process communication library
    "pyyaml",  # configuration parsing
    "psutil", # to get process stats
    "pyqtgraph>=0.13",  # plotting library
    "pyqt5>=5.15.10",
    "pytest",
    "matplotlib",  # generate colormaps for lookuptables
    "testfixtures",  # for unittests with logging output inspection
    # coverage  # for unit test coverage stats, only needed for CI autocoverage
    # coveralls  # for unit test coverage stats, only needed for CI autocoverage
]

[project.scripts]
# starts the online monitor application; blocking until app exit
online_monitor = 'online_monitor.OnlineMonitor:main'
# starts the converters; blocking until CRTL-C
start_converter = 'online_monitor.start_converter:main'
# starts the producer simulatiion; blocking until CRTL-C
start_producer_sim = 'online_monitor.start_producer_sim:main'
# starts the online monitor application + converters + producer
# simulation defined on the configuration.yaml
start_online_monitor = 'online_monitor.start_online_monitor:main'
# Helper function to clean up crashed instances
stop_online_monitor = 'online_monitor.stop_online_monitor:main'
# Conveinience function to easially plugin online monitor 
plugin_online_monitor = 'online_monitor.plugin_online_monitor:main'

[project.urls]
"Repository" = 'https://github.com/SiLab-Bonn/online_monitor'

[tool.setuptools.dynamic]
version = {attr = "online_monitor.__version__"}

[tool.setuptools]
packages = ["online_monitor"]

